--- a/assest/style/figma.css
+++ b/assest/style/figma.css
@@ -60,11 +60,6 @@
     color: #191619;
 }
 
-/*.image {
-    margin-top: -30px;
-    max-height: 100px;
-}*/
-
 
 .company {
     margin: 10px 0;
@@ -85,14 +80,14 @@
 }
 
 .loginborder {
-    border: 1px solid #0CBBC7;
+    border: 1px solid rgb(12, 187, 199);
     display: flex;
-    padding: 12px 47px 9px 47px;
+    padding: 12px 47px 12px;
     width: 138px;
     box-sizing: border-box;
-    color: #0CBBC7;
+    color: rgb(12, 187, 199);
     font-weight: 600;
-    Gap: 10px;
+    gap: 10px;
     margin-bottom: 17px;
 }
 
@@ -118,16 +113,22 @@
 
 .power-section {
     background: #EDFEFF;
+    padding-bottom: 241px;
+
+}
+
+.logo {
+    margin-top: -28px;
 }
 
 .frame-image {
     background-image: url(/assest/img/stripe.png);
     position: absolute;
     left: 0px;
-    top: 0px;
+    top: 5px;
     right: 0px;
     bottom: 0px;
-    height: 635px;
+    height: 677px;
     opacity: 0.1;
     margin-top: 85px;
 }
@@ -139,7 +140,7 @@
     font-weight: 700;
     font-size: 44px;
     color: #191619;
-    margin-top: 65px;
+    margin-top: 110px;
 }
 
 .second-text-editor {
@@ -166,6 +167,7 @@
     width: 188px;
     box-sizing: border-box;
     position: relative;
+    margin-bottom: 55px;
 }
 
 .getStartedFree {
@@ -197,7 +199,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     margin-top: 12px;
-    width: 462px;
     height: 287px;
 }
 
@@ -255,7 +256,7 @@
 
 
 .customer-section {
-    margin-top: 50px;
+    margin-top: -101px;
 }
 
 .picture-section {
@@ -349,27 +350,26 @@
     opacity: 0.05;
     background: #000000;
     margin-bottom: 47px;
-    width: 944px;
+    width: 400px;
     height: 1px;
 }
 
-.ourpromise { 
+.ourpromise {
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
 }
 
-.people-image{ 
-    border-radius: 4px;
+.people-image {
+    border-radius: 25px;
     background-image: url(/assest/img/group\ of\ people.png);
     background-position-x: 50%;
     background-position-y: center;
     background-size: cover;
     background-repeat: no-repeat;
     margin-top: 12px;
-    width: 598px;
-    height: 287px;
-    left: 344px;    
+    bottom: 258px;
+    height: 451px;
     position: relative;
 }
 
@@ -674,6 +674,21 @@
     box-sizing: border-box;
 }
 
+.social-list {
+    display: flex;
+    /* justify-content: space-between; */
+    column-gap: 1em;
+    flex-wrap: wrap;
+    gap: 54px;
+    opacity: 0.8;
+    margin-top: 2px; 
+    font-family: 'Plus Jakarta Sans';
+    font-weight: 400;
+    font-size: 16px;
+    color: #676767;
+    margin-top: 25px;
+}
+
 .create {
     margin-top: 3px;
     display: flex;
@@ -776,7 +791,7 @@
 .create-box {
     background: #0CBBC7;
     margin-right: 708px;
-    width: 236px;
+    width: 189px;
     height: 3px;
 }
 
@@ -829,7 +844,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     margin-top: 12px;
-    width: 462px;
     height: 287px;
 }
 
@@ -927,8 +941,8 @@
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
+    width: 287px;
     padding-left: 5px;
-    width: 358px;
     height: 400px;
     box-sizing: border-box;
 }
@@ -939,8 +953,9 @@
     position: absolute;
     width: 70px;
     height: 70px;
-    margin: 155px;
+    margin: 169px 107px;
 }
+
 
 .polygon2 {
     position: relative;
@@ -978,7 +993,7 @@
     width: 20px;
     height: 20px;
     box-sizing: border-box;
-    left: 140px;
+    left: 232px;
     position: relative;
 }
 
@@ -987,7 +1002,7 @@
     width: 20px;
     height: 20px;
     box-sizing: border-box;
-    left: 138px;
+    left: 229px;
     position: relative;
 }
 
@@ -1016,13 +1031,13 @@
     color: #0CBBC7;
 }
 
-.drive-impact {
+/*.drive-impact {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     width: 944px;
     box-sizing: border-box;
-}
+}*/
 
 .driveimpact {
     margin-bottom: 97px;
@@ -1039,7 +1054,7 @@
     color: #000000;
 }
 
-.frame60 {
+.case-study {
     background: #0CBBC7;
     margin-right: 16.6px;
     padding: 10px 20px;
@@ -1061,10 +1076,10 @@
     display: flex;
     flex-direction: column;
     padding: 20px 0 33px 20px;
-    width: 358px;
+    width: 313px;
     box-sizing: border-box;
     top: 86px;
-    right: 165px;
+    right: 38px;
 }
 
 .image22 {
@@ -1257,7 +1272,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     margin-bottom: 25px;
-    width: 290px;
     height: 150px;
 
 }
@@ -1308,7 +1322,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     margin-bottom: 25px;
-    width: 290px;
     height: 150px;
 
 }
@@ -1321,7 +1334,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     margin-bottom: 25px;
-    width: 290px;
     height: 150px;
 
 }
@@ -1340,7 +1352,16 @@
     flex-direction: column;
     padding: 38px 34px 40px 35px;
     box-sizing: border-box;
-    width: fit-content;
+}
+
+#excepteur-frame5 {
+    box-shadow: 0px 7px 10px 0px rgba(0, 0, 0, 0.03);
+    border-radius: 4px;
+    background: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    padding: 38px 34px 42px 35px;
+    box-sizing: border-box;
 }
 
 .excepteur-frame1 {
@@ -1349,17 +1370,16 @@
     background: #FFFFFF;
     display: flex;
     flex-direction: column;
-    padding: 38px 34px 27px 35px;
-    box-sizing: border-box;
-    width: fit-content;
+    padding: 38px 34px 41px 35px;
 }
+
 .excepteur-frame2 {
     box-shadow: 0px 7px 10px 0px rgba(0, 0, 0, 0.03);
     border-radius: 4px;
     background: #FFFFFF;
     display: flex;
     flex-direction: column;
-    padding: 38px 34px 45px 35px;
+    padding: 38px 34px 32px 35px;
     box-sizing: border-box;
     width: fit-content;
 }
@@ -1414,7 +1434,7 @@
 
 .footerline {
     opacity: 0.1;
-    background: #FFFFFF;    
+    background: #FFFFFF;
     margin-bottom: 39px;
     height: 1px;
 }
@@ -1457,32 +1477,28 @@
     justify-content: space-between;
 }
 
+@media (min-width: 1400px) {
 
-
-@media (max-width: 768px) {
-
-    /* Styles for screens up to 768px wide */
     .container,
     .container-lg,
     .container-md,
     .container-sm,
     .container-xl,
     .container-xxl {
-        max-width: 1200px !important;
+        max-width: 936px;
     }
-
 }
 
-@media (max-width: 480px) {
+@media (min-width: 1400px) {
 
-    /* Styles for screens up to 480px wide */
-    .container,
+    #container,
     .container-lg,
-    .container-md,
+    #container-md,
     .container-sm,
     .container-xl,
     .container-xxl {
-        max-width: 1200px !important;
+        max-width: 1144px; 
+        margin-left: 168px;
+        
     }
-
 }
